# bank_app

./: README.md  config.py  dop2.py  main.py  pyproject.toml  run_test.py
data/: myfile.txt  operations.json  test.csv  test.xlsx  transactions_excel.xlsx
src/: addit_func.py  decorators.py  external_api.py  generators.py  masks.py  my_module._py  my_module.py  myfile.txt  processing.py  sort.py  utils.py  widget.py
tests/: conftest.py  dop2.py  myfile.txt  run_test.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_mymodule._py  test_mymodule.py  test_processing.py  test_transaction.json  test_utils.py  test_widget.py
